新增事件总线机制以及修复 TreeView 菜单随处可点问题